<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/candal"
                android:text="@string/enter_item"
                android:textColor="#03A9F4"
                android:textSize="22sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/babyItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:hint="@string/hint_item" />

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/babyItem"
                android:hint="@string/hint_qty"
                android:inputType="number" />

            <EditText
                android:id="@+id/itemColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemQuantity"
                android:hint="@string/hint_color" />

            <EditText
                android:id="@+id/itemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemColor"
                android:hint="@string/hint_price"
                android:inputType="number" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemPrice"
                android:layout_marginEnd="5dp"
                android:background="#03A9F4"
                android:text="@string/save_button"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
