<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/text_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/bitter"
                android:padding="10dp"
                android:text="@string/sure_text"
                android:textColor="#FF0000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/conf_no_button"
                android:text="@string/no_text"
                android:textStyle="bold"
                android:textSize="18dp"
                android:background="#D6D0D0"
                android:textColor="#000000"
                android:layout_marginTop="80dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/conf_yes_button"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:text="@string/yes_text"
                android:background="#FF0000"
                android:textColor="#ffffff"
                android:layout_marginTop="80dp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>